modules/03-production/01-ingress/solution/crystalPepsi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: crystalpepsi
  name: crystalpepsi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crystalpepsi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crystalpepsi
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: crystalpepsi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content
        configMap:
          name: pepsiconfigmap

---
---
kind: Service
apiVersion: v1
metadata:
  name: crystalpepsi
spec:
  selector:
    app: crystalpepsi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
