modules/03-production/01-ingress/solution/whiteCoke-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: whitecoke
  name: whitecoke
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whitecoke
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whitecoke
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: whitecoke
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content
        configMap:
          name: cokeconfigmap

---
kind: Service
apiVersion: v1
metadata:
  name: whitecoke
spec:
  selector:
    app: whitecoke
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
