modules/03-production/01-ingress/solution/wp-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wp
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-http
          servicePort: 80
